# piney

./: .env.example  .gitignore  Cargo.toml  README.md  convert_license.py  package-lock.json  package.json
.github/workflows/: android-release.yml  docker-publish.yml  tauri-build.yml
doc/: piney.md  windows环境下项目打包apk指南.md
docker/: Dockerfile  docker-compose.yml
docs/: 0.md  render-style.md  临时提示词.md
docs/cankao/: card-clean-book.json  clear.json  regex-正则脚本名称.json  regex-正则表达式名称.json  关联干净的世界书 (2).json  关联干净的世界书-含正则.json  干净的全局世界书.json  新建角色卡+世界书无条目.json  新建角色卡+世界书条目+正则.json  新建角色卡+世界书条目.json  新建角色卡.json  测试 (3).json  测试 (4).json  测试-不包含正则.json  测试-包含正则.json  陆知微 - 2025-08-11@18h57m13s copy.source.jsonl
docs/jsonl/: jsonl渲染方法.md  sillytavern相关.md  示例.md  示例2.md  补充.md  酒馆助手渲染方法.md
docs/other-project/: 酒馆助手脚本-聊天记录导出.json
docs/plans/: dashboard.md
docs/project-doc/: AI_Service_Layer_Guide.md  AI对话配置及功能实现文档.md  HTMLRender组件文档.md  SillyTavern-Character-card-dev.md  component_library.md  full-screen-editor.md  global2char.md  jsonl转txt应用文档.md  mustyaml.md  noyaml.md  regex.md  render.md  render2.md  unsaved-changes.md  worldinfoprompt.md  插入位置.md  正则在酒馆中的实现.md  项目开发文档.md
docs/prompt/: 提示词.md  提示词2.md
frontend/: package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1766626306143-e1da22480078b.mjs
migration/: Cargo.toml
src/: auth.rs  config.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  LICENSE.rtf  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+134 files in other folders)
